@@ -29,6 +29,41 @@ using Fem2D::MeshPoint;
 extern bool NoWait; 
 
 typedef Mesh * pmesh;
+
+
+
+class classBuildMesh :  public E_F0mps { public:  
+ 
+   typedef pmesh  Result;
+
+   static basicAC_F0::name_and_type name_param[] ;
+   static const int n_name_param =1;
+   
+    Expression nargs[n_name_param];
+   
+   Expression getborders;
+   
+   long arg(int i,Stack stack,long a) const{ return nargs[i] ? GetAny<long>( (*nargs[i])(stack) ): a;}
+   
+    classBuildMesh(const basicAC_F0 & args) 
+    {   
+      args.SetNameParam(n_name_param,name_param,nargs);
+      getborders=to<const E_BorderN *>(args[0]); 
+     }   
+     
+    static ArrayOfaType  typeargs() { return  ArrayOfaType(atype<const E_BorderN *>());}
+    static  E_F0 * f(const basicAC_F0 & args){ return new classBuildMesh(args);} 
+    AnyType operator()(Stack s) const ;
+    operator aType () const { return atype<Result>();} 
+
+};
+
+basicAC_F0::name_and_type  classBuildMesh::name_param[]= {
+     "nbvx", &typeid(long) 
+};
+
+
+
 class MoveMesh :  public E_F0mps { public:  
  
    typedef pmesh  Result;
@@ -269,6 +304,17 @@ basicAC_F0::name_and_type Op_trunc_mesh::Op::name_param[Op_trunc_mesh::Op::n_nam
  
  };
 
+
+extern Fem2D::Mesh *  BuildMesh(Stack stack, E_BorderN const * const & b,bool justboundary,int nbvmax) ;
+
+
+AnyType classBuildMesh::operator()(Stack stack)  const { 
+    const E_BorderN * borders = GetAny<const E_BorderN *>((*getborders)(stack));
+   long  nbtx         = arg(0,stack,0); 
+   assert(   nbtx >= 0);
+   return SetAny<pmesh>(BuildMesh(stack,borders,false,nbtx));
+
+}
 
 AnyType Op_trunc_mesh::Op::operator()(Stack stack)  const { 
     using namespace    Fem2D;
@@ -1307,11 +1353,12 @@ AnyType CheckMoveMesh::operator()(Stack stack) const
     return SetAny<double>(minarea/2.);
 
 }
-
-
 void init_lgmesh() {
     cout <<"lg_mesh ";
     bamg::MeshIstreamErrorHandler = MeshErrorIO;
+//   Global.Add("buildmesh","(",new OneOperator1s_<pmesh,const E_BorderN *>(BuildMesh));
+   Global.Add("buildmesh","(",new OneOperatorCode<classBuildMesh>);
+   Global.Add("buildmeshborder","(",new OneOperator1s_<pmesh,const E_BorderN *>(BuildMeshBorder));    
    Global.Add("adaptmesh","(",new OneOperatorCode<Adaptation>);
    Global.Add("movemesh","(",new OneOperatorCode<MoveMesh>);
    Global.Add("splitmesh","(",new OneOperatorCode<SplitMesh>);
